# Progetto-LIP

./: .gitignore  README.md
lip22/: .ocamlinit  dune-project  lip22.opam
lip22/lib/: ast.ml  lexer.mll  main.ml  parser.mly  prettyprint.ml  types.ml
lip22/test/: factorial  tests
