(lang dune 3.5)

(name lip22)

(generate_opam_files true)

(source
 (github CyberGiant7/Progetto-LIP))

(authors "Dessì Leonardo", "Dessì Matteo", "Corda Erica", "Giuffrida Simone")

(maintainers "Dessì Leonardo", "Dessì Matteo", "Corda Erica", "Giuffrida Simone")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name lip22)
 (synopsis "Repeat programming language")
 (description "LIP Project 2022/2023 - Repeat programming language")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

(using menhir 2.1)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
